feat: added field for file filters
