# server/swagger/docs.json
@@ -1512,6 +1512,12 @@
           "items": {
             "$ref": "#/definitions/File"
           }
+        },
+        "fileExtensions": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
